src/test/ui/error-codes/E0603.stderr
error[E0603]: constant `PRIVATE` is private
  --> $DIR/E0603.rs:6:17
   |
LL |     SomeModule::PRIVATE;
   |                 ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
